--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer utilities {
+    ul#js-numeros-anteriores-01::-webkit-scrollbar, ul#js-numeros-anteriores-02::-webkit-scrollbar {
+        display: none;
+    };
+};
