--- a/src/css/output.css
+++ b/src/css/output.css
@@ -598,6 +598,14 @@ video {
   height: 100%;
 }
 
+.max-h-52 {
+  max-height: 13rem;
+}
+
+.min-h-52 {
+  min-height: 13rem;
+}
+
 .w-36 {
   width: 9rem;
 }
@@ -624,6 +632,14 @@ video {
 
 .gap-4 {
   gap: 1rem;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
+.scroll-smooth {
+  scroll-behavior: smooth;
 }
 
 .rounded-2xl {
@@ -735,7 +751,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+ul#js-numeros-anteriores-01::-webkit-scrollbar, ul#js-numeros-anteriores-02::-webkit-scrollbar {
+  display: none;
+};
+
 .disabled\:bg-gray-500:disabled {
   --tw-bg-opacity: 1;
   background-color: rgb(107 114 128 / var(--tw-bg-opacity));
 }
+
+.disabled\:bg-gray-400:disabled {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
+};
